--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
       <input required maxlength="15" type="text" placeholder="What is your name?" />
       <input type="submit" value="Log In" />
     </form>
-
     <h1 id="greeting"></h1>
     <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+      <input required type="text" placeholder="Write To Do and Press Enter" />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
@@ -26,4 +29,5 @@
   <script src="js/clock.js"></script>
   <script src="js/quotes.js"></script>
   <script src="js/background.js"></script>
+  <script src="js/todo.js"></script>
 </html>
