--- a/index.html
+++ b/index.html
@@ -30,4 +30,5 @@
   <script src="js/quotes.js"></script>
   <script src="js/background.js"></script>
   <script src="js/todo.js"></script>
+  <script src="js/weather.js"></script>
 </html>
